# Math-Game-Web-App

./: .gitignore  Architecture & Design.txt  CMakeLists.txt  DifficultySettings.cpp  Dockerfile  Jenkinsfile  README.md  main.cpp
MathGame.Tests/: MathGame.Tests.cpp  MathGame.Tests.vcxproj  MathGame.Tests.vcxproj.filters
MathGame.Tests/MathGame.Tests/x64/Debug/: MathGame.Tests.dll.recipe  MathGame.Tests.ilk  vc143.idb
MathGame.Tests/MathGame.Tests/x64/Debug/MathGame.Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MathGame.Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MathGame.Tests/x64/Debug/: CodeAnalysisResultManifest.txt  MathGame.Tests.dll.recipe  MathGame.Tests.ilk  MathGame.Tests.lib  MathGame.Tests.nativecodeanalysis.sarif  pch.nativecodeanalysis.sarif  vc143.idb
MathGame.Tests/x64/Debug/MathGame.Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MathGame.Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MathGameMain/: CMakeLists.txt  Database.cpp  Game.cpp  Jenkinsfile  game.h  gameHard.cpp  gameHard.h  gameMedium.cpp  gameMedium.h  main.cpp  tests.cpp  vcpkg.json
MathGameMain/static/: DifficultySettings.html  game.html  gameHard.html  gameMedium.html  login.html
Math_Game/: ConsoleApplication1.cpp  Database.cpp  Database.h  Game.cpp  Game.h  build_and_run.sh  main.cpp  pch.h  run_tests_with_coverage.sh  uniform_int_dist.h.gcov
Math_Game/Aaron Files/: ConsoleApplication1.cpp  Game.h  test.cpp
Math_Game/Sample-Test1/: Sample-Test1.vcxproj  test.cpp
Math_Game/static/: game.html  index.html  login.html  main.css
Math_Game/tests/: database_error_paths.cpp  database_tests.cpp  game_tests.cpp  main_tests.cpp
Samuels stuff for now/: CMakeLists.txt  Database.h  DifficultySettings.cpp  Game.cpp  game.h  gameHard.h  gameMedium.cpp  gameMedium.h  main.cpp  tests.cpp  vcpkg.json
Samuels stuff for now/static/: DifficultySettings.html  Menu.html  game.html  gameMedium.html  main.css
carlsMathGame/: input.txt  mathGame.sln  mathGame.vcxproj  mathGame.vcxproj.filters  math_game.cpp  run_tests.cpp
carlsMathGame/mathGame/Debug/: mathGame.exe.recipe  mathGame.ilk  vc143.idb
carlsMathGame/mathGame/Debug/mathGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mathGame.lastbuildstate
carlsMathGame/mathGame/x64/Debug/: mathGame.exe.recipe  mathGame.ilk  vc143.idb
carlsMathGame/mathGame/x64/Debug/mathGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mathGame.lastbuildstate
carlsMathGame/testingProgram/: mathGameTesting.sln  mathGameTesting.vcxproj
carlsMathGame/testingProgram/mathGameTesting/: tests.cpp
carlsMathGame/testingProgram/mathGameTesting/x64/Debug/: mathGameTesting.exe.recipe  mathGameTesting.ilk  tests.obj.enc  vc143.idb
carlsMathGame/testingProgram/mathGameTesting/x64/Debug/mathGameTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mathGameTesting.lastbuildstate
carlsMathGame/x64/Debug/: MathGame.Tests.exp  MathGame.Tests.lib
carlsMathGame/x64/Debug/fine-code-coverage/coverage-tool-output/: Cobertura.xml  MathGame.Tests-fcc-mscodecoverage-generated.runsettings  hotspots.xml  index-processed.html  index.htm
carlsMathGame/x64/Debug/fine-code-coverage/coverage-tool-output/b6c5c33d-f5f7-4243-93cb-72700048687c/: Carlb_DESKTOP-8EKLG65_2025-11-03.21_36_08.cobertura.xml
mathgAME/mathGame1/: MathProblem.cpp  MathProblem.h  mathGame1.cpp  mathGame1.sln  mathGame1.vcxproj  mathGame1.vcxproj.filters  math_game.cpp
mathgAME/mathGame1/mathGame1/Debug/: mathGame1.exe.recipe  mathGame1.ilk  vc143.idb
mathgAME/mathGame1/mathGame1/Debug/mathGame1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mathGame1.lastbuildstate
mathgAME/mathGame1/mathGame1/x64/Debug/: mathGame1.exe.recipe  mathGame1.ilk  vc143.idb
mathgAME/mathGame1/mathGame1/x64/Debug/mathGame1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mathGame1.lastbuildstate
www/: DifficultySettings.html  index.html
